Removed some functional support methods that are now availble in the JVM